--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,7 +367,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .carousel-item::before {
   content: '';
-  background-color: rgba(30, 35, 40, 0.6);
+  /* background-color: rgba(30, 35, 40, 0.6); */
+  background-color: #1e232859;
 }
 
 #hero .carousel-container {
